--- a/apollo/frontend/templates/frontend/results.html
+++ b/apollo/frontend/templates/frontend/results.html
@@ -26,112 +26,109 @@
 			{%- for lt in location_types -%}
 			<div class="tab-pane{%- if loop.first %} active{%- endif -%}" id="tab_{{ loop.index }}">
 				{%- if result_labels -%}
-				<table class="table-responsive">
-					<table class="table table-bordered table-hover">
-						<tr>
-							<th width="200" rowspan="2" style="vertical-align:middle" class="gray">&nbsp;</th>
-							<th class="gray">&nbsp;</th>
-							<th class="gray">&nbsp;</th>
-							{%- if form.registered_voters_tag -%}
-							<th class="gray">&nbsp;</th>
-							{%- endif -%}
-							<th width="30"{% if form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Total votes{%- endtrans -%}</th>
-							<th width="100"{% if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Rejected ballots{%- endtrans -%}</th>
-							<th width="30" class="gray" style="text-align:center">{%- trans -%}Total valid{%- endtrans -%}</th>
-							{%- for party in result_descriptions -%}
-							<th width="100"{%- if form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{{ party }}</th>
-							{%- endfor -%}
-						</tr>
-						<tr>
-							<td class="centered" width="10%"><em>{%- trans -%}Reported{%- endtrans -%}</em></td>
-							<td class="centered" width="10%"><em>{%- trans -%}Missing{%- endtrans -%}</em></td>
-							{%- if form.registered_voters_tag -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Total registered{%- endtrans -%}">{%- trans -%}TR{%- endtrans -%}</abbr></em></td>
-							{%- endif -%}
-							<td class="centered" width="10%">{%- trans -%}Votes{%- endtrans -%}</td>
-							{%- if form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
-							{%- endif -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Rejected ballots{%- endtrans -%}">{%- trans -%}RB{%- endtrans -%}</abbr></em></td>
-							{%- if form.calculate_moe and config.ENABLE_MOE -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
-							{%- endif -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Total valid{%- endtrans -%}">{%- trans -%}TV{%- endtrans -%}</abbr></em></td>
-							{%- for party in result_descriptions -%}
-							<td class="centered"><em>{%- trans -%}Votes{%- endtrans -%}</em></td>
-							{%- if form.calculate_moe and config.ENABLE_MOE -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
-							{%- endif -%}
-							{%- endfor -%}
-						</tr>
-                        {% with index = dataframe.groupby(location.location_type).groups.get(location.name) %}
-                        {% if index %}
-                            {% set df = dataframe.ix[index] %}
-						<tr>
-							<th class="gray" style="vertical-align:middle">{{ location.name }} &middot; <span class="muted"><em>{{ location.location_type }}</em></span></th>
-							<th class="numeric gray">{{ df|reported_pct(result_labels) }}% <br>({{ df|reported(result_labels) }})</th>
-							<th class="numeric gray">{{ df|missing_pct(result_labels) }}% <br>({{ df|missing(result_labels) }})</th>
-							{%- if form.registered_voters_tag -%}
-							<th class="numeric gray">{{ df|total_registered(form) }}</th>
-							{%- endif -%}
-							<th class="numeric gray">{{ df|all_votes_total_pct(form, result_labels) }}% ({{ df|all_votes_total(form, result_labels) }})</th>
-							{%- if form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE -%}
-							<th class="numeric gray">{{ df|all_votes_total_moe(form, result_labels) }}%</th>
-							<th class="numeric gray">{{ df|all_votes_total_moe(form, result_labels, 258.0) }}%</th>
-							{%- endif -%}
-							<th class="numeric gray">{{ df|rejected_proportion(form) }}%<br />({{ df|rejected_count(form) }})</th>
-                            {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                            <th class="numeric gray">{{ df|rejected_moe(form) }}%</th>
-                            <th class="numeric gray">{{ df|rejected_moe(form, 258.0) }}%</th>
-                            {%- endif -%}
-                            <th class="numeric gray">{{ df|valid_votes_total(result_labels) }}</th>
-                            {%- for vote in result_labels -%}
-                            <th class="numeric gray">{{ df|vote_proportion(form, result_labels, vote) }}%<br />({{ df|vote_count(result_labels, vote) }})</th>
-                            {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                            <th class="numeric gray">{{ df|vote_moe(form, result_labels, vote) }}%</th>
-                            <th class="numeric gray">{{ df|vote_moe(form, result_labels, vote, 258.0) }}%</th>
-                            {%- endif -%}
-                            {%- endfor -%}
-						</tr>
-                        {% endif %}
-                        {% endwith %}
-						{%- for sublocation in location_tree[lt.name] -%}
-                        {% with index = dataframe.groupby(sublocation.location_type).groups.get(sublocation.name) %}
-                        {% if index %}
-                            {% set df = dataframe.ix[index] %}
-						<tr>
-							<td class="gray" style="vertical-align:middle">{{ sublocation.name }} &middot; <span class="muted"><em>{{ sublocation.location_type }}</em></span></td>
-							<th class="numeric gray">{{ df|reported_pct(result_labels) }}% <br>({{ df|reported(result_labels) }})</th>
-							<th class="numeric gray">{{ df|missing_pct(result_labels) }}% <br>({{ df|missing(result_labels) }})</th>
-							{%- if form.registered_voters_tag -%}
-							<th class="numeric gray">{{ df|total_registered(form) }}</th>
-							{%- endif -%}
-							<th class="numeric gray">{{ df|all_votes_total_pct(form, result_labels) }}% ({{ df|all_votes_total(form, result_labels) }})</th>
-							{%- if form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE -%}
-							<th class="numeric gray">{{ df|all_votes_total_moe(form, result_labels) }}%</th>
-							<th class="numeric gray">{{ df|all_votes_total_moe(form, result_labels, 258.0) }}%</th>
-							{%- endif -%}
-							<th class="numeric gray">{{ df|rejected_proportion(form) }}%<br />({{ df|rejected_count(form) }})</th>
-                            {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                            <th class="numeric gray">{{ df|rejected_moe(form) }}%</th>
-                            <th class="numeric gray">{{ df|rejected_moe(form, 258.0) }}%</th>
-                            {%- endif -%}
-                            <th class="numeric gray">{{ df|valid_votes_total(result_labels) }}</th>
-                            {%- for vote in result_labels -%}
-                            <th class="numeric gray">{{ df|vote_proportion(form, result_labels, vote) }}%<br />({{ df|vote_count(result_labels, vote) }})</th>
-                            {%- if form.calculate_moe and config.ENABLE_MOE -%}
-                            <th class="numeric gray">{{ df|vote_moe(form, result_labels, vote) }}%</th>
-                            <th class="numeric gray">{{ df|vote_moe(form, result_labels, vote, 258.0) }}%</th>
-                            {%- endif -%}
-                            {%- endfor -%}
-						</tr>
-                        {% endif %}
-                        {% endwith %}
+				<table class="table table-bordered table-hover table-striped table-responsive">
+					<tr>
+						<th width="200" style="vertical-align:middle">&nbsp;</th>
+						<th>&nbsp;</th>
+						<th>&nbsp;</th>
+						{%- if form.registered_voters_tag -%}
+						<th>&nbsp;</th>
+						{%- endif -%}
+						<th width="30"{% if False and form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{%- trans -%}Total votes{%- endtrans -%}</th>
+						<th width="100"{% if False and form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{%- trans -%}Rejected ballots{%- endtrans -%}</th>
+						<th width="30" style="text-align:center">{%- trans -%}Total valid{%- endtrans -%}</th>
+						{%- for party in result_descriptions -%}
+						<th width="100"{%- if False and form.calculate_moe and config.ENABLE_MOE %} colspan="3"{%- endif -%} style="text-align:center">{{ party }}</th>
 						{%- endfor -%}
-					</table>
+					</tr>
+					<tr>
+                        <td>&nbsp;</td>
+						<td class="centered" width="10%"><em>{%- trans -%}Reported{%- endtrans -%}</em></td>
+						<td class="centered" width="10%"><em>{%- trans -%}Missing{%- endtrans -%}</em></td>
+						{%- if form.registered_voters_tag -%}
+						<td class="centered"><em><abbr title="{%- trans -%}Total registered{%- endtrans -%}">{%- trans -%}TR{%- endtrans -%}</abbr></em></td>
+						{%- endif -%}
+						<td class="centered" width="10%">{%- trans -%}Votes{%- endtrans -%}</td>
+						{%- if False and form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE -%}
+						<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+						{%- endif -%}
+						<td class="centered"><em><abbr title="{%- trans -%}Rejected ballots{%- endtrans -%}">{%- trans -%}RB{%- endtrans -%}</abbr></em></td>
+						{%- if False and form.calculate_moe and config.ENABLE_MOE -%}
+						<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+						{%- endif -%}
+						<td class="centered"><em><abbr title="{%- trans -%}Total valid{%- endtrans -%}">{%- trans -%}TV{%- endtrans -%}</abbr></em></td>
+						{%- for party in result_descriptions -%}
+						<td class="centered"><em>{%- trans -%}Votes{%- endtrans -%}</em></td>
+						{%- if False and form.calculate_moe and config.ENABLE_MOE -%}
+						<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
+						<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
+						{%- endif -%}
+						{%- endfor -%}
+					</tr>
+					<tr>
+						<th style="vertical-align:middle">{{ location.name }} &middot; <span class="muted"><em>{{ location.location_type }}</em></span></th>
+						<th class="numeric">{{ '%.1f' % data_analyses.overall.reported_pct|percent_of(1, 0) }}% <br>({{ data_analyses.overall.reported_cnt }})</th>
+						<th class="numeric">{{ '%.1f' % data_analyses.overall.missing_pct|percent_of(1, 0) }}% <br>({{ data_analyses.overall.missing_cnt }})</th>
+						{%- if form.registered_voters_tag -%}
+						<th class="numeric">{{ data_analyses.overall.rv }}</th>
+						{%- endif -%}
+						<th class="numeric">{{ '%.1f' % data_analyses.overall.all_valid_votes_pct|percent_of(1, 0) }}% ({{ data_analyses.overall.all_valid_votes }})</th>
+						{%- if False and form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE -%}
+						<th class="numeric">{{ df|all_votes_total_moe(form, result_labels) }}%</th>
+						<th class="numeric">{{ df|all_votes_total_moe(form, result_labels, 258.0) }}%</th>
+						{%- endif -%}
+						<th class="numeric">{{ '%.1f' % data_analyses.overall.total_rejected_pct|percent_of(1, 0) }}%<br />({{ data_analyses.overall.total_rejected }})</th>
+                        {%- if False and form.calculate_moe and config.ENABLE_MOE -%}
+                        <th class="numeric">{{ df|rejected_moe(form) }}%</th>
+                        <th class="numeric">{{ df|rejected_moe(form, 258.0) }}%</th>
+                        {%- endif -%}
+                        <th class="numeric">{{ data_analyses.overall.all_valid_votes }}</th>
+                        {%- for vote in result_labels -%}
+                        {%- with vote_cnt = data_analyses['overall']['{}_cnt'.format(vote)] -%}
+                        {%- with vote_pct = data_analyses['overall']['{}_pct'.format(vote)] -%}
+                        <th class="numeric">{{ '%.1f' % vote_pct|percent_of(1, 0) }}%<br />({{ vote_cnt }})</th>
+                        {%- if False and form.calculate_moe and config.ENABLE_MOE -%}
+                        <th class="numeric">{{ df|vote_moe(form, result_labels, vote) }}%</th>
+                        <th class="numeric">{{ df|vote_moe(form, result_labels, vote, 258.0) }}%</th>
+                        {%- endif -%}
+                        {%- endwith -%}
+                        {%- endwith -%}
+                        {%- endfor -%}
+					</tr>
+					{%- for sublocation in data_analyses.grouped[lt.name] -%}
+					<tr>
+						<td style="vertical-align:middle">{{ sublocation.name }} &middot; <span class="muted"><em>{{ sublocation.location_type }}</em></span></td>
+						<th class="numeric">{{ '%.1f' % sublocation.reported_pct|percent_of(1, 0) }}% <br>({{ sublocation.reported_cnt }})</th>
+						<th class="numeric">{{ '%.1f' % sublocation.missing_pct|percent_of(1, 0) }}% <br>({{ sublocation.missing_cnt }})</th>
+						{%- if form.registered_voters_tag -%}
+						<th class="numeric">{{ sublocation.rv }}</th>
+						{%- endif -%}
+						<th class="numeric">{{ '%.1f' % sublocation.all_valid_votes_pct|percent_of(1, 0) }}% ({{ sublocation.all_valid_votes }})</th>
+						{%- if False and form.registered_voters_tag and form.calculate_moe and config.ENABLE_MOE -%}
+						<th class="numeric">{{ df|all_votes_total_moe(form, result_labels) }}%</th>
+						<th class="numeric">{{ df|all_votes_total_moe(form, result_labels, 258.0) }}%</th>
+						{%- endif -%}
+						<th class="numeric">{{ '%.1f' % sublocation.total_rejected_pct|percent_of(1, 0) }}%<br />({{ sublocation.total_rejected }})</th>
+                        {%- if False and form.calculate_moe and config.ENABLE_MOE -%}
+                        <th class="numeric">{{ df|rejected_moe(form) }}%</th>
+                        <th class="numeric">{{ df|rejected_moe(form, 258.0) }}%</th>
+                        {%- endif -%}
+                        <th class="numeric">{{ sublocation.all_valid_votes }}</th>
+                        {%- for vote in result_labels -%}
+                        {%- with vote_cnt = sublocation['{}_cnt'.format(vote)] -%}
+                        {%- with vote_pct = sublocation['{}_pct'.format(vote)] -%}
+                        <th class="numeric">{{ '%.1f' % vote_pct|percent_of(1, 0) }}%<br />({{ vote_cnt }})</th>
+                        {%- if False and form.calculate_moe and config.ENABLE_MOE -%}
+                        <th class="numeric">{{ df|vote_moe(form, result_labels, vote) }}%</th>
+                        <th class="numeric">{{ df|vote_moe(form, result_labels, vote, 258.0) }}%</th>
+                        {%- endif -%}
+                        {%- endwith -%}
+                        {%- endwith -%}
+                        {%- endfor -%}
+					</tr>
+					{%- endfor -%}
 				</table>
 				{%- else -%}
 				<table width="100%" class="table table-striped table-bordered">
